# Matrix

./: .gitignore  CMakeLists.txt
Oracle/: Instructions
StarterCode/: ColElementItr.h  ColItr.h  Matrix.cpp  Matrix.h  MatrixError.cpp  MatrixError.h  MatrixInnerDimensionMismatchError.h  MatrixSizeError.h  MatrixSizeMismatchError.h  RowElementItr.h  RowItr.h
TestFiles/: ColItr.cpp  MainBadSizedMatrix.cpp  MainColIterate.cpp  MainColOutOfBounds.cpp  MainIndexing.cpp  MainMatrixMinusEqualMatrix.cpp  MainMatrixMinusEqualScalar.cpp  MainMatrixMinusMatrix.cpp  MainMatrixMinusScalar.cpp  MainMatrixPlusEqualMatrix.cpp  MainMatrixPlusEqualScalar.cpp  MainMatrixPlusMatrix.cpp  MainMatrixPlusScalar.cpp  MainMatrixTimesEqualMatrix.cpp  MainMatrixTimesEqualScalar.cpp  MainMatrixTimesMatrix.cpp  MainMatrixTimesScalar.cpp  MainNegateTest.cpp  MainReadMatrixFromFile.cpp  MainRowIterate.cpp  MainRowOutOfBounds.cpp  MainScalarMinusMatrix.cpp  MainScalarPlusMatrix.cpp  MainScalarTimesMatrix.cpp  MainSimplePrintout.cpp
TestFiles/Matrices/: 34MatrixSecond.txt
