cmake_minimum_required(VERSION 3.9)
project(Problems_7)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problems_7
        Oracle/ColElementItr.o
        Oracle/ColItr.o
        Oracle/Instructions
        Oracle/Matrix.o
        Oracle/MatrixError.o
        Oracle/MatrixInnerDimensionMismatchError.o
        Oracle/MatrixSizeError.o
        Oracle/MatrixSizeMismatchError.o
        Oracle/RowElementItr.o
        Oracle/RowItr.o
        StarterCode/ColElementItr.cpp
        StarterCode/ColElementItr.h
        StarterCode/ColItr.cpp
        StarterCode/ColItr.h
        StarterCode/Matrix.cpp
        StarterCode/Matrix.h
        StarterCode/MatrixError.cpp
        StarterCode/MatrixError.h
        StarterCode/MatrixInnerDimensionMismatchError.cpp
        StarterCode/MatrixInnerDimensionMismatchError.h
        StarterCode/MatrixSizeError.cpp
        StarterCode/MatrixSizeError.h
        StarterCode/MatrixSizeMismatchError.cpp
        StarterCode/MatrixSizeMismatchError.h
        StarterCode/RowElementItr.cpp
        StarterCode/RowElementItr.h
        StarterCode/RowItr.cpp
        StarterCode/RowItr.h
        TestFiles/Matrices/34Matrix.txt
        TestFiles/Matrices/34MatrixSecond.txt
        TestFiles/Matrices/43Matrix.txt
        TestFiles/ColItr.cpp
        TestFiles/MainBadSizedMatrix.cpp
        TestFiles/MainColIterate.cpp
        TestFiles/MainColOutOfBounds.cpp
        TestFiles/MainIndexing.cpp
        TestFiles/MainMatrixMinusEqualMatrix.cpp
        TestFiles/MainMatrixMinusEqualScalar.cpp
        TestFiles/MainMatrixMinusMatrix.cpp
        TestFiles/MainMatrixMinusScalar.cpp
        TestFiles/MainMatrixPlusEqualMatrix.cpp
        TestFiles/MainMatrixPlusEqualScalar.cpp
        TestFiles/MainMatrixPlusMatrix.cpp
        TestFiles/MainMatrixPlusScalar.cpp
        TestFiles/MainMatrixTimesEqualMatrix.cpp
        TestFiles/MainMatrixTimesEqualScalar.cpp
        TestFiles/MainMatrixTimesMatrix.cpp
        TestFiles/MainMatrixTimesScalar.cpp
        TestFiles/MainNegateTest.cpp
        TestFiles/MainReadMatrixFromFile.cpp
        TestFiles/MainRowIterate.cpp
        TestFiles/MainRowOutOfBounds.cpp
        TestFiles/MainScalarMinusMatrix.cpp
        TestFiles/MainScalarPlusMatrix.cpp
        TestFiles/MainScalarTimesMatrix.cpp
        TestFiles/MainSimplePrintout.cpp)
